--- a/style.css
+++ b/style.css
@@ -34,4 +34,34 @@ section {
 img {
   width: 100%;
   border-radius: 12px;
+  margin-bottom: 30px;
+}
+
+h1 {
+  font-size: 30px;
+  font-family: "Young Serif", serif;
+  margin-bottom: 20px;
+}
+
+.preparation-time {
+    background-color: #FFF7FC;
+    padding: 30px;
+    margin: 20px 0;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.preparation-time h3 {
+    font-family: "Outfit", sans-serif;
+    font-size: 20px;
+    color: brown;
+}
+
+.preparation-time ul {
+    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
 }
